--- a/Pages/User/Questions.razor
+++ b/Pages/User/Questions.razor
@@ -30,7 +30,47 @@
     }
     else
     {
-
+        <div class="fixed-top">
+            <TopNavBar>
+                <div class="container align-content-center justify-content-center text-center">
+                    <div class="row">
+                        <div class="row col">
+                            <div class="col-4">
+                                <button @onclick="() => GetQuestions(QuestionPaged.CurrentPage -1)" class="btn btn-outline-light @(!(QuestionPaged.CurrentPage > 1) ? "disabled" : "")">
+                                    Previous
+                                </button>
+                            </div>
+                            <div class="col-4 text-center">
+                                <p style="font-size:small">
+                                    Page @QuestionPaged.CurrentPage / @QuestionPaged.Pages
+                                </p>
+                            </div>
+                            <div class="col-4">
+                                <button @onclick="() => GetQuestions(QuestionPaged.CurrentPage +1)"
+                                        class="btn btn-outline-light @(!(QuestionPaged.CurrentPage < QuestionPaged.Pages) ? "disabled" : "")">
+                                    Next
+                                </button>
+                            </div>
+                        </div>
+                        <div class="col-2 align-self-center" @onclick="() => OpenSearchBar()">
+                            <span class="oi oi-magnifying-glass text-white" aria-hidden="true"></span>
+                        </div>
+                    </div>
+                    <div style="display:@(searchBarOpen == true ? "block" : "none");" class="m-1">
+                        <div class="row text-center">
+                            <div class="col-10">
+                                <InputText class="form-control" DisplayName="searchQuestions" @bind-Value="searchTerm" placeholder="Search for one keyword" />
+                            </div>
+                            <div class="col-2">
+                                <button class="btn btn-primary" @onclick="() => GetSearchQuestions()">
+                                    <span class="oi oi-magnifying-glass" aria-hidden="true"></span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </TopNavBar>
+        </div>
         <div style="margin-bottom:110px;">
             <Virtualize Items="QuestionPaged.Questions.ToList()" Context="question" TItem="Question">
                 <ItemContent>
@@ -135,47 +175,6 @@
             </Virtualize>
         </div>
     }
-    <div class="fixed-bottom">
-        <TopNavBar>
-            <div class="container align-content-center justify-content-center text-center">
-                <div class="mb-md-2 mb-sm-2 me-lg-5" style="display:@(searchBarOpen == true ? "block" : "none");">
-                    <div class="row text-center">
-                        <div class="col-10">
-                            <InputText class="form-control" DisplayName="searchQuestions" @bind-Value="searchTerm" placeholder="Search for one keyword" />
-                        </div>
-                        <div class="col-2">
-                            <button class="btn btn-primary" @onclick="() => GetSearchQuestions()">
-                                <span class="oi oi-magnifying-glass" aria-hidden="true"></span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="row col">
-                        <div class="col-4">
-                            <button @onclick="() => GetQuestions(QuestionPaged.CurrentPage -1)" class="btn btn-outline-light @(!(QuestionPaged.CurrentPage > 1) ? "disabled" : "")">
-                                Previous
-                            </button>
-                        </div>
-                        <div class="col-4 text-center">
-                            <p style="font-size:small">
-                                Page @QuestionPaged.CurrentPage / @QuestionPaged.Pages
-                            </p>
-                        </div>
-                        <div class="col-4">
-                            <button @onclick="() => GetQuestions(QuestionPaged.CurrentPage +1)"
-                                    class="btn btn-outline-light @(!(QuestionPaged.CurrentPage < QuestionPaged.Pages) ? "disabled" : "")">
-                                Next
-                            </button>
-                        </div>
-                    </div>
-                    <div class="col-2 align-self-center" @onclick="() => OpenSearchBar()">
-                        <span class="oi oi-magnifying-glass text-white" aria-hidden="true"></span>
-                    </div>
-                </div>
-            </div>
-        </TopNavBar>
-    </div>
 </div>
 
 
